--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ body {
     text-align: center;
     margin: 15%;
     font-family: 'Roboto Condensed', sans-serif;
-    background-color: #f2f2f2;
+    background-color: ghostwhite;
 }
 
 h1 {
-    color: green;
+    color: darkgreen;
     font-size: 4em;
 }
 
