--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     text-align: center;
     margin: 15%;
     font-family: 'Roboto Condensed', sans-serif;
-    background-color: #000017;
+    background-color: #3e4444;
 }
 
 h1 {
@@ -12,6 +12,6 @@ h1 {
 
 a {
     text-decoration: none;
-    color: orange;
+    color: #82b74b;
     font-size: 3em;
 }
