--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
     text-align: center;
     margin: 15%;
-    font-family: 'Roboto Condensed', sans-serif;
+    /*font-family: 'Roboto Condensed', sans-serif;*/
+    font-family: 'IBM Plex Sans Condensed', sans-serif;
     background-color: #3e4444;
 }
 
