--- a/public/style.css
+++ b/public/style.css
@@ -16,16 +16,16 @@ body {
     text-align: center;
     margin: 15%;
     font-family: 'Roboto Condensed', sans-serif;
-    background-color: #3e4444;
+    background-color: #383c4a;
 }
 
 h1 {
-    color: white;
+    color: #7c818c;
     font-size: 4em;
 }
 
 a {
     text-decoration: none;
-    color: #82b74b;
+    color: #5294e2;
     font-size: 3em;
 }
