--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@
 body {
     text-align: center;
     margin: 15%;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: /*'Roboto Condensed',*/ sans-serif;
     background-color: #383c4a;
 }
 
