--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@
 body {
     text-align: center;
     margin: 15%;
-    font-family: /*'Roboto Condensed',*/ sans-serif;
+    font-family: sans-serif;
     background-color: #383c4a;
 }
 
@@ -28,4 +28,9 @@ a {
     text-decoration: none;
     color: #5294e2;
     font-size: 3em;
+}
+
+div {
+    position: fixed;
+    bottom: 0;
 }
