--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,10 @@
 /*
     This file is part of slondr.github.io.
-    slondr.github.io is free software: you can redistribute it and/or modify
+    slondr.gitlab.io is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
-    Foobar is distributed in the hope that it will be useful,
+    slondr.gitlab.io is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
@@ -20,19 +20,24 @@ body {
 }
 
 h1 {
-    color: #7c818c;
     font-size: 4em;
 }
 
 a {
-    text-decoration: none;
+    text-decorration: none;
+}
+    
+.element {
     color: #5294e2;
     font-size: 3em;
 }
 
-div {
+.footer {
     position: fixed;
     bottom: 0;
     text-align: center;
-    color: #7c818c
+}
+
+.highlight {
+    color: #7c818c;
 }
