--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
     You should have received a copy of the GNU General Public License
-    along with slondr.github.io.  If not, see <https://www.gnu.org/licenses/>.
+    along with slondr.gitlab.io.  If not, see <https://www.gnu.org/licenses/>.
 */
 
 body {
@@ -35,6 +35,8 @@ a {
 .footer {
     position: fixed;
     bottom: 0;
+    left: 0;
+    right: 0;
     text-align: center;
 }
 
