--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,6 @@
 */
 
 body {
-    text-align: center;
     margin: 15%;
     font-family: sans-serif;
     background-color: #383c4a;
@@ -29,6 +28,8 @@ a {
 .container {
     display: flex;
     align-content: space-between;
+    justify-concent: space-evenly;
+    align-items: center;
     flex-direction: column;
 }
 
