--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,7 @@
 body {
     margin: 15%;
     font-family: sans-serif;
-    background-color: #383c4a;
+    background-color: #272822;
 }
 
 h1 {
@@ -35,7 +35,7 @@ a {
 }
 
 .element {
-    color: #5294e2;
+    color: #fd9715;
     margin: auto;
     font-size: 3em;
 }
@@ -49,5 +49,5 @@ a {
 }
 
 .highlight {
-    color: #7c818c;
+    color: white;
 }
