--- a/style.css
+++ b/style.css
@@ -15,11 +15,7 @@ body {
     margin: 8%;
     font-family: sans-serif;
     background-color: #272822;
-    color: gray;
-}
-
-h1 {
-    text-align: center;
+    color: white;
 }
 
 a {
@@ -37,8 +33,6 @@ a:visited {
 .container {
     display: flex;
     align-content: space-between;
-    justify-concent: space-evenly;
-    align-items: center;
     flex-direction: column;
 }
 
