--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ body {
     color: white;
 }
 
+div.content {
+    margin: 20px auto 0px auto;
+    max-width: 650px;
+    line-height: 1.2;
+}
+
 a {
     text-decoration: none;
 }
