--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ div.content {
     line-height: 1.2;
 }
 
+div.navbar {
+    display: inline-block;
+    padding: 10px;
+}
+
 a {
     text-decoration: none;
 }
