--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div class="content">
+      {% include navbar.md %}
       <div class="container">
 	{{ content }}
       </div>
