fixed syntax error and added books yaml

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,7 @@
       <h2 class="title">{{ page.title }}</h2>
       {% if page.index != true %}
       <div class="inline-date"><i>{{ page.date | date: '%B %-d, %Y' }}</i></div>
+      {% endif %}
       <div class="container">
 	{{ content }}
       </div>
