--- a/style.css
+++ b/style.css
@@ -46,3 +46,52 @@ pre {
 .right {
     text-align: right;
 }
+
+/* Fade Animations */
+
+/** Basic styles for an animated element */
+.content {
+    animation-duration: 0.25s;
+    transition-timing-function: ease-in;
+    animation-fill-mode: both;
+    
+}
+
+/** An element that fades in */
+.scene_element--fadein {
+    animation-name: fadeIn;
+}
+
+/** An element that fades in and slides up */
+.scene_element--fadeinup {
+    animation-name: fadeInUp;
+}
+
+/** An element that fades in and slides from the right */
+.scene_element--fadeinright {
+    animation-name: fadeInRight;
+}
+
+@keyframes fadeIn {
+    0% {
+	opacity: 0;
+    }
+
+    100% {
+	opacity: 1;
+    }
+}
+
+@keyframes fadeInRight {
+    0% {
+	opacity: 0;
+	transform: translate3d(100%, 0, 0);
+    }
+
+    100% {
+	opacity: 1;
+	transform: none;
+    }
+}
+
+/* End Fade Animations */
