--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ pre {
 }
 
 /** An element that fades in and slides from the right */
-.scene_element--fadeinright {
+div {
     animation-name: fadeInRight;
 }
 
