--- a/style.css
+++ b/style.css
@@ -94,4 +94,16 @@ div.container {
     }
 }
 
+@keyframes fadeInUp {
+    0% {
+	opacity: 0;
+	transform: translate3d(0, 100%, 0);
+    }
+    
+    100% {
+	opacity: 1;
+	transform: none;
+    }
+}
+
 /* End Fade Animations */
