--- a/style.css
+++ b/style.css
@@ -94,6 +94,18 @@ div.container {
     }
 }
 
+@keyframes fadeInDown {
+    0% {
+	opacity: 0;
+	transform: translate3d(0, -100%, 0);
+    }
+
+    100% {
+	opacity: 1;
+	transform: none;
+    }
+}
+
 @keyframes fadeInUp {
     0% {
 	opacity: 0;
