--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,13 @@
   </head>
   <body>
     <div class="content">
-      {% include navbar.md %}
+      {% capture navbar %}{% include navbar.md %}{% endcapture %}
+      {% navbar | markdownify %}
       <div class="container">
 	{{ content }}
       </div>
-      {% include footer.md %}
+      {% capture footer %}{% include footer.md %}{% endcapture %}
+      {% footer | markdownify %}
     </div>
   </body>
 </html>
