--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,12 @@
   <body>
     <div class="content">
       {% capture navbar %}{% include navbar.md %}{% endcapture %}
-      {% navbar | markdownify %}
+      {{ navbar | markdownify }}
       <div class="container">
 	{{ content }}
       </div>
       {% capture footer %}{% include footer.md %}{% endcapture %}
-      {% footer | markdownify %}
+      {{ footer | markdownify }}
     </div>
   </body>
 </html>
