--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <div class="content">
-      {% include navbar.md %}
+      {% capture navbar %}{% include navbar.md %}{% endcapture %}
+      {{ navbar | markdownify }}
       <h2 class="title">{{ page.title }}</h2>
       {% if page.index != true %}
       <div class="inline-date"><i>{{ page.date | date: '%B %-d, %Y' }}</i></div>
@@ -14,7 +15,8 @@
       <div class="container">
 	{{ content }}
       </div>
-      {% include footer.md %}
+      {% capture footer %}{% include footer.md %}{% endcapture %}
+      {{ footer | markdownify }}
     </div>
   </body>
 </html>
