footer is now markdown-only, not mixed with html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,10 @@
       <div class="container">
 	{{ content }}
       </div>
+      <footer>
       {% capture footer %}{% include footer.md %}{% endcapture %}
       {{ footer | markdownify }}
+      </footer>
     </div>
   </body>
 </html>
