fixed navbar markdownify stuff

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,10 @@
   </head>
   <body>
     <div class="content">
+      <div class="navbar">
       {% capture navbar %}{% include navbar.md %}{% endcapture %}
       {{ navbar | markdownify }}
+      </div>
       <h2 class="title">{{ page.title }}</h2>
       {% if page.index != true %}
       <div class="inline-date"><i>{{ page.date | date: '%B %-d, %Y' }}</i></div>
@@ -15,8 +17,10 @@
       <div class="container">
 	{{ content }}
       </div>
+      <footer>
       {% capture footer %}{% include footer.md %}{% endcapture %}
       {{ footer | markdownify }}
+      </footer>
     </div>
   </body>
 </html>
