--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,10 @@
   </head>
   <body>
     <div class="content">
-      {% capture navbar %}{% include navbar.md %}{% endcapture %}
-      {{ navbar | markdownify }}
+      <div class="navbar">
+	{% capture navbar %}{% include navbar.md %}{% endcapture %}
+	{{ navbar | markdownify }}
+      </div>
       <div class="container">
 	{{ content }}
       </div>
