--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ div.content {
     line-height: 1.2;
 }
 
-div.navbar {
+nav {
     display: inline-block;
     padding: 10px;
     word-spacing: 5px;
