max width is now eighty columns

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-size: 1.3em;
-    max-width: 900px;
+    max-width: 80ch;
     background-color: #272822;
     color: white;
     margin: auto;
