updated layout syntax for Nunjucks

--- a/src/favorites.md.njk
+++ b/src/favorites.md.njk
@@ -1,6 +1,8 @@
 ---
-layout: default
+
 ---
+{% extends "layout/default.html" %}
+
 <iframe 
 	src="https://duckduckgo.com/search.html?bgcolor=272822&focus=yes" 
 	style="overflow:hidden;margin:0;padding:0;max-width:900px;height:60px;"
