--- a/src/blog.md.njk
+++ b/src/blog.md.njk
@@ -1,8 +1,9 @@
 ---
 title: Blog
-layout: post
 blog_index: true
 ---
+{% extends "layouts/post.html" %}
+
 {% for post in site.posts %}
 {% if post.draft != true %}
 - <div class="post-date"><i>{{ post.date | date: '%B %-d, %Y' }}</i></div>
