--- a/src/games.md.njk
+++ b/src/games.md.njk
@@ -1,7 +1,7 @@
 ---
 title: Games
-layout: post
 ---
+{% extends "layout/post.html" %}
 
 Right from this website, you can play [a text-based adventure game about Stevens](/Burger) that I wrote (but forgot to submit) for a Game Jam in 2017. It was never fully finished, but is technically playable from intro to credits. I completed a [much smaller, yet fully finished, spiritual successor](/Sleep) for a similar Game Jam in 2019.
 
