starting to recreate site

--- a/_src/404.html.md.pug
+++ b/_src/404.html.md.pug
@@ -1,7 +1,5 @@
----
-title: Page Not Found
----
-{% extends "layout/raw.html" %}
+title Page Not Found
+include layout/raw.html
 
 <link rel="stylesheet" href="/css/style.css">
 
