Fixed footer syntax and stuff

--- a/src/includes/footer.pug
+++ b/src/includes/footer.pug
@@ -1,3 +1,6 @@
 hr
-p © 2019 Eric S. Londres. This website is licensed under the terms of the [GNU GPL](/GPL). You can view the source code
-| a(href='https://gitlab.com/slondr/slondr.gitlab.io/') here
+| © 2019 Eric S. Londres. This website is licensed under the terms of the 
+a(href='/GPL') GNU GPL
+| . You can view the source code 
+a(href='https://gitlab.com/slondr/slondr.gitlab.io/') here
+| .
