added first paragraph of index page

--- a/src/index.pug
+++ b/src/index.pug
@@ -7,7 +7,14 @@ html
 		header
 			include includes/header.pug
 		main
-			p Hello, world!
+			h1 I'm Eric S. Londres.
+			p
+				| I'm an undergraduate student at Stevens Institute of Technology and 
+				a(href='https://gitlab.com/slondr') a programmer by trade
+				| . I also enjoy 
+				a(href='https://www.youtube.com/channel/UC5o62RNnvTBYlFZhJVmV0XQ') videography 
+				| in my spare time, as well as gaming.
+				
 		footer
 			include includes/footer.pug
 		     
