second paragraph done

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,6 +14,16 @@ html
 				| . I also enjoy 
 				a(href='https://www.youtube.com/channel/UC5o62RNnvTBYlFZhJVmV0XQ') videography 
 				| in my spare time, as well as gaming.
+			p
+				| I currently hold the position of President at 
+				a(href='https://www.sittv.org') SITTV
+				| , 
+				a(href='https://www.youtube.com/SITTV') Stevens's television station and film club
+				| . I occasionally write and edit articles for 
+				a(href='http://thestute.com') The Stute
+				| , Stevens's newspaper. I'm also a member of the Alpha Phi Omega national service fraternity's 
+				a(href='https://apota.org') Theta Alpha chapter
+				| , where I presently serve as Webmaster.
 				
 		footer
 			include includes/footer.pug
