actually finished second paragraph

--- a/src/index.pug
+++ b/src/index.pug
@@ -23,7 +23,8 @@ html
 				a(href='http://thestute.com') The Stute
 				| , Stevens's newspaper. I'm also a member of the Alpha Phi Omega national service fraternity's 
 				a(href='https://apota.org') Theta Alpha chapter
-				| , where I presently serve as Webmaster.
+				| , where I presently serve as Webmaster. 
+				a(href='/games/') I've also dabbled in game development.
 				
 		footer
 			include includes/footer.pug
