--- a/src/index.pug
+++ b/src/index.pug
@@ -25,7 +25,14 @@ html
 				a(href='https://apota.org') Theta Alpha chapter
 				| , where I presently serve as Webmaster. 
 				a(href='/games/') I've also dabbled in game development.
-				
+			p
+				| If you'd like to get in contact with me, 
+				a(href='mailto:ericlondres@outlook.com') shoot me an email 
+				| or hit me up on 
+				a(href='https://www.linkedin.com/in/eric-londres-153239171') LinkedIn
+				| . I'm generally more responsive to the former. If you'd like to send me an encrypted email, 
+				a(href='/pubkey') here is my public key
+				| .
 		footer
 			include includes/footer.pug
 		     
