updated stute link

--- a/src/index.pug
+++ b/src/index.pug
@@ -20,7 +20,7 @@ html
 				| , 
 				a(href='https://www.youtube.com/SITTV') Stevens's television station and film club
 				| . I occasionally write and edit articles for 
-				a(href='http://thestute.com') The Stute
+				a(href='https://thestute.com/author/elondres/') The Stute
 				| , Stevens's newspaper. I'm also a member of the Alpha Phi Omega national service fraternity's 
 				a(href='https://apota.org') Theta Alpha chapter
 				| , where I presently serve as Webmaster. 
