Added link hover color and click count color

--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -31,6 +31,8 @@ a
     color: #e6db74
   &:visited
     color: #fd971f
+  &:hover
+    color: #a6e22e
 
 main
   display: flex
@@ -40,6 +42,9 @@ main
 ul
   list-style-type: lower-greek
 
+.click-count
+  color: white
+  
 /* Animation definitions
 
 @keyframes fadeInDown
