hides weather on small screens

--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -44,8 +44,14 @@ ul
 
 .click-count
   color: white
+
+// Small screen definitions
+
+@media max-width: 700px
+  .weather
+    display: none
   
-/* Animation definitions
+// Animation definitions
 
 @keyframes fadeInDown
   0%
