Linked new CSS files

--- a/src/index.pug
+++ b/src/index.pug
@@ -3,6 +3,7 @@ html
 	head
 		title Eric S. Londres
 		link(rel='stylesheet' href='css/style.css')
+		link(rel='stylesheet' href='css/content.css')
 		script(src='starfield.js')
 	body
 		div(class='fullScreen' id='fullScreen')			
