--- a/src/css/favorites.sass
+++ b/src/css/favorites.sass
@@ -3,3 +3,11 @@
 
 ul
   list-style-type: none
+  display: grid
+  grid-template-columns: repeat(3, 1fr)
+  
+@media (max-width: 700px)
+  grid-template-columns: repeat(2, 1fr)
+
+@media (max-width: 500px)
+  grid-template-columns: repeat(1, 1fr)
