--- a/public/index.css
+++ b/public/index.css
@@ -14,4 +14,14 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    font-size: 5em;
+}
+
+#last-name {
+    color: #66d9ef;
+}
