--- a/public/index.css
+++ b/public/index.css
@@ -40,11 +40,20 @@ footer {
 
 .nav {
     min-width: 5ch;
+    padding: 3px;
     opacity: 85%;
+    border-bottom: 0.1px solid #66d9ef;
+    transition: background 0.1s cubic-bezier(.33,.66,.66,1);
+}
+
+.nav:hover {
+    background:#99020030;
+    border-bottom: 0.1px solid #990200;
 }
 
 #guard {
     opacity: 50%;
+    padding: 3px;
 }
 
 #last-name {
