--- a/src/index.sass
+++ b/src/index.sass
@@ -1,69 +1,55 @@
-* {
-    margin: 0;
-    padding: 0;
-}
+*
+  margin: 0
+  padding: 0
 
-html {
-    font-family: sans-serif;
-    height: 100vh;
-}
+html
+  font-family: sans-serif
+  height: 100vh
 
-body {
-    color: white;
-    background-color: #272822;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+body
+  color: white
+  background-color: #272822
+  height: 100vh
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
 
-h1 {
-    font-size: 5em;
-}
+h1
+  font-size: 5em
 
-i:hover {
-    color: #66d9ef;
-}
+i:hover
+  color: #66d9ef
 
-a, #guard {
-    margin: 8px;
-}
+a, #guard
+  margin: 8px
 
-a {
-    text-decoration: none;
-    color: inherit;
-}
+a
+  text-decoration: none
+  color: inherit
 
-footer {
-    text-align: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
+footer
+  text-align: center
+  display: flex
+  flex-direction: row
+  justify-content: center
+  
+.nav
+  min-width: 5ch
+  padding: 3px
+  opacity: 85%
+  border-bottom: 0.1px solid #66d9ef
+  transition: background 0.1s cubic-bezier(.33,.66,.66,1)
+  &:hover
+    background:#99020030
+    border-bottom: 0.1px solid #990200
 
-.nav {
-    min-width: 5ch;
-    padding: 3px;
-    opacity: 85%;
-    border-bottom: 0.1px solid #66d9ef;
-    transition: background 0.1s cubic-bezier(.33,.66,.66,1);
-}
+#guard
+  opacity: 50%
+  padding: 3px
 
-.nav:hover {
-    background:#99020030;
-    border-bottom: 0.1px solid #990200;
-}
+#last-name
+  color: #66d9ef
 
-#guard {
-    opacity: 50%;
-    padding: 3px;
-}
-
-#last-name {
-    color: #66d9ef;
-}
-
-#icons {
-    margin: 1%;
-}
+#icons
+  margin: 1%
