--- a/src/about.sass
+++ b/src/about.sass
@@ -1,32 +1,27 @@
 *
-  margin: 0;
-  padding: 0;
-
+  margin: 0
+  padding: 0
 
 html
-  font-family: sans-serif;
-
+  font-family: sans-serif
 
 body
-  color: white;
-  background-color: #272822;
-  margin: 10%;
-
+  color: white
+  background-color: #272822
+  margin: 10%
 
 p
-  margin: 4%;
-  line-height: 1.5;
-
+  margin: 4%
+  line-height: 1.5
 
 a
-  text-decoration: none;
-  color: inherit;
-  opacity: 85%;
-  border-bottom: 0.1px solid #66d9ef;
-  transition: background 0.1s cubic-bezier(.33,.66,.66,1);
-  transition: border-bottom 0.1s cubic-bezier(.33,.66,.66,1);
-
+  text-decoration: none
+  color: inherit
+  opacity: 85%
+  border-bottom: 0.1px solid #66d9ef
+  transition: background 0.1s cubic-bezier(.33,.66,.66,1)
+  transition: border-bottom 0.1s cubic-bezier(.33,.66,.66,1)
   &:hover
-    background:#99020070;
-    border-bottom: 0.1px solid #990200;
-    
+    background:#99020070
+    border-bottom: 0.1px solid #990200
+
