added media query for smol screen

--- a/src/index.sass
+++ b/src/index.sass
@@ -53,3 +53,10 @@ footer
 
 #icons
   margin: 1%
+
+@media only screen and (max-width: 470px)
+  h1
+    font-size: 2em
+
+  h2
+    font-size: 1.4em
